Fix checkout buttons for contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,10 @@ body {
     color: #00004d !important;
 }
 
+.books-red-text {
+    color: #7d141f;
+}
+
 .text-muted {
     color: #00004d !important;;
 }
